fixed spacing issue

--- a/src/components/PokeFetch/PokeFetch.scss
+++ b/src/components/PokeFetch/PokeFetch.scss
@@ -84,7 +84,7 @@
       position: relative;
       width: 50%;
       align-items: center;
-      
+      height: 100%;
       background: rgba(240, 240, 240, 0.804);
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.363);
       border: none;
@@ -107,6 +107,7 @@
       width: max-content;
       padding: 10px;
       border: none;
+      height: 100%;
 
       &:hover {
         cursor: pointer;
@@ -154,28 +155,22 @@
     .info {
       margin-top: 8%;
       height: 20%;
-      width: 60%
-    } 
+      width: 60%;
+    }
   }
 }
 
-@media(max-width: 870px){
-  .content{
-    .fetch{
+@media (max-width: 870px) {
+  .content {
+    .fetch {
       margin: 10%;
     }
 
-    .info{
+    .info {
       width: 70%;
-      height: 25%
-    }
-
-    .search-btn{
-      padding: 0;
+      height: 100%;
     }
   }
-
-
 }
 
 @media (max-width: 620px) {
@@ -187,20 +182,20 @@
       margin-top: 15%;
       width: 95%;
       height: max-content;
-     
     }
   }
 }
 
-@media (max-width: 450px){
-  .content{
+@media (max-width: 450px) {
+  .content {
     overflow-x: hidden;
-    .fetch{
-      margin-top: 20%;
-      width: 80%;  
+
+    .fetch {
+      margin-top: 25%;
+      width: 80%;
     }
 
-    .info{
+    .info {
       margin-top: 20%;
       width: 95%;
       height: max-content;
